<resources>
    <string name="app_name">物资管理-现场</string>
    <string name="sweep_string">将二维码/条码放入框内，即可自动扫描</string>
    <string name="jiekai">东营杰开智能科技有限公司</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="device_type">设备类型</string>
    <string name="device_name">设备名称</string>
    <string name="device_id">设备自编码</string>
    <string name="device_bind">绑定设备</string>
    <string name="take_picture">拍照</string>
    <string name="read_card">读卡</string>
    <string name="one_read_card">标签一读卡</string>
    <string name="two_read_card">标签二读卡</string>
    <string name="three_read_card">标签三读卡</string>
    <string name="create_code">生成二维码</string>
    <string name="ic_code">ic卡号</string>
    <string name="add">添加</string>
    <string name="please_wait">请稍后</string>
    <string name="loging">正在登录...</string>
    <string name="image">图片</string>
    <string name="enter">确定</string>
    <string name="wait_read_nfc">请把标签贴近手机，准备读卡</string>
    <string name="loding_device_type">正在加载设备类型</string>
    <string name="loding_device_bh">正在加载设备自编号</string>
    <string name="loding_device_mc">正在加载设备名称</string>
    <string name="loading_device">正在加载设备信息</string>
    <string name="please_nfc">请刷卡</string>
    <string name="part_name">配件名称</string>
    <string name="part_id">配件自编码</string>
    <string name="part_ic_id">配件标签ID</string>
    <string name="device_ic_id_one">设备标签ID一</string>
    <string name="device_ic_id_two">设备标签ID二</string>
    <string name="device_ic_id_three">设备标签ID三</string>
    <string name="adding_depart">正在添加配件</string>
    <string name="please_first_get_part_bh">请先扫描卡片，获取配件信息</string>
    <string name="please_first_get_device_card">请扫描设备ID卡，获取ID号</string>
    <string name="please_first_get_device">请先添加设备信息</string>
    <string name="add_depart_success">添加配件成功</string>
    <string name="serial_num">序号</string>
    <string name="bindding_device">正在绑定设备...</string>
    <string name="please_choose_image">请选择图片</string>
    <string name="uploading_image">正在上传图片</string>
    <string name="device_bind_success">设备绑定成功</string>
    <string name="please_choose_true_iamge">请选择正确的图片</string>
    <string name="device_output">设备出库</string>
    <string name="wuzimingcheng">物资名称</string>
    <string name="shiyongjinghao">使用井号</string>
    <string name="recongnize_code">扫码</string>
    <string name="xuhao">序号</string>
    <string name="shebeixinghao">设备型号</string>
    <string name="use_compone">领用单位</string>
    <string name="shenqingzhuangtai">申请状态</string>
    <string name="loading_data">正在加载数据</string>
    <string name="no_data">没有找到数据</string>
    <string name="out_device_erro">此设备和申请的设备不匹配</string>
    <string name="device_already_out">此设备已经出库，请重新选择设备</string>
    <string name="device_already_in">此设备已经入库，请重新选择设备</string>
    <string name="device_already_scrap">此设备已经报废，请重新选择设备</string>
    <string name="choose_out_device">请选择要出库的设备</string>
    <string name="choose_in_device">请选择要入库的设备</string>
    <string name="choose_scrap_device">请选择要报废的设备</string>
    <string name="choose_repair_device">请选择要维修的设备</string>
    <string name="shebei_leibie">设备类别</string>
    <string name="shebei_xinghao">设备型号</string>
    <string name="shebei_guige">设备规格</string>
    <string name="loading_leixing">正在加载设备类别</string>
    <string name="params_empty">参数为空</string>
    <string name="start_data">起始日期</string>
    <string name="input_start_data">选择起始日期</string>
    <string name="device_out_history">出库查询</string>
    <string name="input_end_data">选择结束日期</string>
    <string name="find">查询</string>
    <string name="search">搜索</string>
    <string name="device_unit_type">设备型号</string>
    <string name="outpu_time">出库时间</string>
    <string name="picture">照片</string>
    <string name="device_input">设备入库</string>
    <string name="device_detail">设备详情</string>
    <string name="get_id_err">读卡失败</string>
    <string name="device_scrap">设备报废</string>
    <string name="repair_type">维修类型</string>
    <string name="choose_repair_type">请选择维修类型</string>
    <string name="device_repair">设备维修</string>
    <string name="pan_ku">盘库</string>
    <string name="start">开始</string>
    <string name="finish">结束</string>
    <string name="upload">上传</string>
    <string name="detail">详情</string>
    <string name="stop_pan_ku">盘库结束</string>
    <string name="panku_detail">盘库详情</string>
    <string name="device_num">设备数量</string>
    <string name="cancle">取消</string>
    <string name="logout">退出登录</string>
    <string name="bule_connect">蓝牙连接</string>
    <string name="click_again_finish">再次点击退出物资管理</string>
    <string name="input_jinghao">请输入井号</string>
    <string name="please_input_jinghao">请输入井号</string>
    <string name="uploading_db">正在上传数据库</string>
    <string name="device_out_success">设备出库成功</string>
    <string name="device_in_success">设备入库成功</string>
    <string name="device_out_faild">设备出库失败</string>
    <string name="device_in_faild">设备入库失败</string>
    <string name="device_repair_faild">设备维修失败</string>
    <string name="device_repair_success">设备维修成功</string>
    <string name="device_scrap_success">设备报废成功</string>
    <string name="device_scrap_faild">设备报废失败</string>
    <string name="device_move_faild">设备转场失败</string>
    <string name="device_move_success">设备转场成功</string>
    <string name="device_inspection_faild">设备巡检失败</string>
    <string name="device_inspection_success">设备巡检成功</string>
    <string name="insert_erro">插入数据库错误</string>
    <string name="out_people">出库人</string>
    <string name="lingyongdanwei">领用单位</string>
    <string name="jinghao">井号</string>
    <string name="update_db_failed">更新数据库失败</string>
    <string name="device_has_panku">该设备已经盘库</string>
    <string name="this_device_panku_failed">该设备盘库失败</string>
    <string name="this_device_panku_success">该设备盘库成功</string>
    <string name="uploading_panku_faild">上传盘库信息失败</string>
    <string name="uploading_panku_success">上传盘库信息成功</string>
    <string name="nfc_stop">已停止盘库</string>
    <string name="input_lingyongdanwei">请输入领用单位</string>
    <string name="loading_data_failed">加载数据失败</string>
    <string name="this_id_has_bind">该标签已经绑定了其它设备</string>
    <string name="no_permission">没有库管权限，请使用库管账号登录</string>
    <string name="no_permission_xc">没有现场权限，请使用现场账号登录</string>
    <string name="zhang_hao_jing_yong">该账号已被禁用</string>
    <string name="device_use_record">使用记录</string>
    <string name="duihao_">队号:</string>
    <string name="duihao">队号</string>
    <string name="input_duihao">请输入队号</string>
    <string name="jinghao_">井号:</string>
    <string name="commit">提交</string>
    <string name="get_bh_faild">获取自编码错误</string>
    <string name="please_input_duihao">请输入队号</string>
    <string name="commit_record_faild">提交记录失败</string>
    <string name="commit_record_success">提交记录成功</string>
    <string name="choose_recent_use">选择最近使用过的设备自编号</string>
    <string name="record_check_result">记录审核</string>
    <string name="record_type">记录种类</string>
    <string name="check_result">审核意见</string>
    <string name="check_jieguo">审核结果</string>
    <string name="your_all_check_pass">您所有的审核都通过了申请</string>
    <string name="check_remark">审核备注</string>
    <string name="recommit">重新提交</string>
    <string name="record_failed_detail">未通过审核详情</string>
    <string name="get_image_fail">获取图片失败</string>
    <string name="device_recod_faild">设备记录失败</string>
    <string name="device_move">设备转场</string>
    <string name="device_inspection">设备巡检</string>
    <string name="ungree_permission">拒绝摄像头权限，该功能无法使用</string>
    <string name="beizhu_">备注:</string>
    <string name="input_beizhu">请输入备注</string>
    <string name="beizhu_to_long">备注只允许输入255个字</string>
    <string name="no_xunjian_permission">您没有巡检权限</string>
    <string name="device_applay">设备申请</string>
    <string name="device_applay_faild">设备申请失败</string>
    <string name="device_applay_success">设备申请成功</string>
    <string name="erro">错误</string>
    <string name="device_applay_detail">设备申请详情</string>

    <string name="update_dialog">更新提醒</string>
    <string name="loading_update">正在下载更新</string>
    <string name="currentsize">已下载：%1s MB</string>
    <string name="allsize">总大小：%1s MB</string>
    <string name="network_break">没有网络连接，请打开网络连接</string>
    <string name="reset">重置</string>
    <string name="connect">连接</string>
    <string name="breake">断开</string>
    <string name="search_blue_first">请扫描并选中一个蓝牙读写器</string>
    <string name="please_choose_blue">请选中一个蓝牙读写器</string>
    <string name="connect_blue_faild">连接蓝牙设备失败</string>
    <string name="match_blue_faild">匹配蓝牙设备失败</string>
    <string name="connect_blue_service_failed">连接蓝牙设备服务失败</string>
    <string name="Constr_connectblueokthentoreader">连接蓝牙设备成功,将连接读写器</string>
    <string name="connected">已连接</string>
</resources>
