<?xml version="1.0" encoding="utf-8"?><!--设备出库记录查询-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/device_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/device_name"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"/>

    <TextView
        android:id="@+id/device_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/device_id"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"/>

    <TextView
        android:id="@+id/device_leibie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/shebei_leibie"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"/>

    <TextView
        android:id="@+id/device_xinghao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/shebei_xinghao"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"/>

    <TextView
        android:id="@+id/device_guige"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/shebei_guige"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"/>

</LinearLayout>