<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:gravity="center_vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
        android:id="@+id/record_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/record_type"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"/>

    <TextView
        android:id="@+id/device_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/device_id"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"/>

    <TextView
        android:id="@+id/duihao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/duihao"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/jinghao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/jinghao"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/check_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/check_result"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"/>

</LinearLayout>