<?xml version="1.0" encoding="utf-8"?><!--设备出库记录查询-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <View
        style="@style/vertile_line_d5"/>

    <TextView
        android:id="@+id/device_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:minHeight="@dimen/item_height"
        android:text="@string/device_name"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"
        android:visibility="visible"/>

    <View
        style="@style/vertile_line_d5"/>

    <TextView
        android:id="@+id/device_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:minHeight="@dimen/item_height"
        android:text="@string/device_id"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"
        android:visibility="visible"/>

    <View
        style="@style/vertile_line_d5"/>

    <TextView
        android:id="@+id/out_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:minHeight="@dimen/item_height"
        android:text="@string/out_people"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"
        android:visibility="visible"/>

    <View
        style="@style/vertile_line_d5"/>

    <TextView
        android:id="@+id/out_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:minHeight="@dimen/item_height"
        android:text="@string/outpu_time"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"
        android:visibility="visible"/>

    <View
        style="@style/vertile_line_d5"/>

    <TextView
        android:id="@+id/lydw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:minHeight="@dimen/item_height"
        android:text="@string/lingyongdanwei"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"
        android:visibility="visible"/>

    <View
        style="@style/vertile_line_d5"/>

    <TextView
        android:id="@+id/jinghao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/item_height"
        android:text="@string/jinghao"
        android:gravity="center"
        android:textSize="@dimen/content_text_size"
        android:textColor="@color/text_content_color"
        android:visibility="visible"/>

    <View
        style="@style/vertile_line_d5"/>

</LinearLayout>