<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/title_image_text_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="@dimen/marginTop10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/button_style"
            android:layout_marginLeft="@dimen/marginTop20"
            android:text="@string/start"/>

        <TextView
            android:id="@+id/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/button_style"
            android:layout_marginLeft="@dimen/marginTop20"
            android:text="@string/finish"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/data_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/button_style"
            android:layout_marginLeft="@dimen/marginTop20"
            android:text="@string/upload"/>

        <TextView
            android:id="@+id/data_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            style="@style/button_style"
            android:layout_marginRight="@dimen/marginTop20"
            android:layout_marginLeft="@dimen/marginTop20"
            android:text="@string/detail"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>