<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_image_text_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginTop10"
        android:layout_marginTop="@dimen/marginTop10">

        <TextView
            android:id="@+id/bt_search_blue"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/marginTop10"
            android:text="@string/search" />

        <TextView
            android:id="@+id/bt_search_reset"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/marginTop10"
            android:text="@string/reset" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lv_blue_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginTop10"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_blue_connect"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

        <TextView
            android:id="@+id/tv_blue_break"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/marginTop10"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/breake" />

    </LinearLayout>

</LinearLayout>